2009-06-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-check-fancy-symbol-name): Don't update the loop
	index inside the loop body.

2009-06-20  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (emacs-connected): Deleted. Setting
	ccl::*interactive-abort-process* doesn't seem right.

2009-06-15  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp: Explicitly require CCL version 1.3.

2009-06-15  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (emacs-inspect [t]): Honor the type returned
	by inspector::line-n.
	(emacs-inspect [compiled-lexical-closure]): Deleted. Let CCL's
	inpector handle this case. Which does it better and it's less work
	for us.

2009-06-14  Helmut Eller  <heller@common-lisp.net>

	Some workarounds for SBCL on Windows.

	* swank-sbcl.lisp (input-available-p): New function.
	(wait-for-input): Use it.
	([win32] handle-listen, has-buffered-input-p): New.
	(temp-file-name, tempnam): Plain tmpnam(3) is next to useless on
	Windows use tempnam(3) instead.

2009-06-12  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Support new environment changes in recent ECL/CVS
	patch largely from ECL maintainer.

2009-06-1  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] font-lock-magic): Moved to fontifying-fu contrib.

2009-06-05  Helmut Eller  <heller@common-lisp.net>

	Don't clutter compiler messages with source positions.  Especially
	stuff like "In an anonymous lambda form inside an anonymous lambda
	form inside an anonymous lambda form inside FOO: Undeclared free
	variable X" is not helpful.

	* swank-openmcl.lisp (compiler-warning-short-message): New GF.
	(handle-compiler-warning): Use it.

	(disassemble-frame): Print current PC.

2009-06-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-dispatch-event [:emacs-rex]): Don't clutter
	the main code-path with confusing error handling.

2009-06-04  Helmut Eller  <heller@common-lisp.net>
